--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -3,7 +3,7 @@ name: Nightly Maintenance Workflow
 
 on:
   schedule:
-    - cron: "0 2 * * *"   # runs every night at 2 AM UTC
+    - cron: "*/2 * * * *"   # runs every night at 2 AM UTC
 
 jobs:
   start:
