--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Tag detected"
+      -run: exit 1
 
   build-release:
     runs-on: ubuntu-latest
